# templates

./: .gitignore  README.md
.github/workflows/: ci.yml
python-uv-django/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  coverage.xml  docker-compose.yml  pyproject.toml
python-uv-django/.github/workflows/: ci.yml
python-uv-django/src/: __init__.py  manage.py
python-uv-django/src/apps/api/: __init__.py  apps.py  serializers.py  urls.py  views.py
python-uv-django/src/apps/core/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
python-uv-django/src/apps/core/migrations/: 0001_initial.py
python-uv-django/src/common/: models.py
python-uv-django/src/config/: asgi.py  urls.py  wsgi.py
python-uv-django/src/config/settings/: base.py  development.py  production.py
python-uv-django/src/type_definitions/: __init__.py
python-uv-django/src/utils/: logger.py
python-uv-django/tests/: conftest.py
python-uv-django/tests/apps/: __init__.py
python-uv-django/tests/apps/api/: test_api.py
python-uv-django/tests/apps/core/: test_models.py  test_selectors.py  test_services.py
python-uv-django/tests/config/: test_settings.py
python-uv-simple/: .dockerignore  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
python-uv-simple/.github/workflows/: ci.yml
python-uv-simple/src/: __init__.py  __main__.py
python-uv-simple/src/config/: __init__.py
python-uv-simple/src/python_uv_simple/: __init__.py  __main__.py  settings.py
python-uv-simple/src/types/: __init__.py
python-uv-simple/src/utils/: logger.py
python-uv-simple/tests/: __init__.py  test_settings.py
python-uv-simple/tests/config/: test_config.py
typescript-node-azfunc-v4/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
typescript-node-azfunc-v4-durable/: .dockerignore  .funcignore  .prettierignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  eslint.config.mjs  host.json  local.settings.json.template  package-lock.json  package.json  tsconfig.json
typescript-node-azfunc-v4-durable/src/: index.ts
typescript-node-azfunc-v4-durable/src/config/: index.ts
typescript-node-azfunc-v4-durable/src/functions/: activities.ts  clients.ts  orchestrators.ts
typescript-node-azfunc-v4-durable/src/types/: index.ts
typescript-node-azfunc-v4-durable/tests/config/: index.test.ts
typescript-node-azfunc-v4-durable/tests/functions/: activities.test.ts  orchestrators.test.ts
typescript-node-azfunc-v4/.github/workflows/: ci.yml
typescript-node-azfunc-v4/src/: index.ts
typescript-node-azfunc-v4/src/config/: index.ts
typescript-node-azfunc-v4/tests/: README.md
typescript-node-azfunc-v4/tests/config/: index.test.ts
typescript-node-simple/: .dockerignore  Dockerfile  README.md  docker-compose.yml  jest.config.mjs  package-lock.json  package.json  tsconfig.json
typescript-node-simple/.github/workflows/: ci.yml
typescript-node-simple/src/: index.ts
typescript-node-simple/src/config/: index.ts
typescript-node-simple/src/utils/: logger.ts
typescript-node-simple/tests/config/: index.test.ts
