[project]
name = "python-uv-simple"
version = "0.1.0"
description = "A Python 3.12 template using uv for professional project scaffolding."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Shon Thomas", email = "shon@oneiriq.com" }
]
dependencies = [
    "pydantic>=2.12.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0", # testing
    "pytest-cov>=7.0.0", # coverage reporting
    "pytest-watch>=4.2.0",
    "ruff>=0.14.0", # linter
    "black>=25.0.0", # formatter
    "mypy>=1.19.0", # static type checker
    "pylint>=4.0.4", # additional linter
]

[project.scripts]
python-uv-simple = "python_uv_simple.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_uv_simple"]

[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 2

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["python_uv_simple"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = true
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.coverage.run]
source = ["src/python_uv_simple"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 100
indent-string = '  '  # 2 spaces

[tool.pylint.messages_control]
disable = [
    'C0103',  # invalid-name (ruff handles this)
    'C0114',  # missing-module-docstring (ruff handles this)
    'C0115',  # missing-class-docstring (ruff handles this)
    'C0116',  # missing-function-docstring (ruff handles this)
    'R0903',  # too-few-public-methods (too opinionated)
    'W0212',  # protected-access (sometimes necessary)
    'C0330',  # bad-continuation (conflicts with black/ruff)
    'C0326',  # bad-whitespace (conflicts with black/ruff)
]

[tool.pylint.basic]
good-names = ['i', 'j', 'k', 'ex', 'id', 'db', '_']

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.14.10",
]
